--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -1,8 +1,23 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+<style>
+    ul.errorlist{
+    margin:0;
+    padding:0;
+    }
+    .errorlist li {
+    background-color: red;
+    color: white;
+    display:block;
+    font-size:10px;
+    margin: 0 0 3px;
+    padding: 4px 5px;
+    }
+</style>
     <title>Register</title>
 </head>
-<body>
+<body background="/images/baidu_home.jpg">
     <h1>注册页面</h1>
 
     {% if form.errors %}
@@ -14,9 +29,12 @@
     <form action="" method="post">
         {% csrf_token %}
         <table>
-            {{form.as_table  }}
+            {{form.as_table}}
         </table>
-        <input type="submit" value="Submit">
+        <input type="submit" value="提交">
     </form>
+    <a href="/home/">
+        <input type="button" value="返回主页"/>
+    </a>
 </body>
 </html>
